--- a/.github/workflows/update-iplist.yml
+++ b/.github/workflows/update-iplist.yml
@@ -1,7 +1,7 @@
 #=================================================
 # https://github.com/qcgzxw/iplist
 # Description: Update ip list using GitHub Actions
-# Lisence: MIT
+# Lisence: GNU Lesser General Public License v3.0
 # Author: qcgzxw
 # Blog: https://www.qcgzxw.com
 #=================================================
@@ -19,8 +19,6 @@ on:
       - '.config'
 
 env:
-  REPO_URL: qcgzxw/iplist_auto
-  REPO_TOKEN: ${{ secrets.GITHUB_PAT }}
   CONFIG_FILE: .config
 
 jobs:
@@ -28,19 +26,25 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Pull repository "iplist_action"
+    - uses: actions/checkout@v2
+      with:
+        repository: qcgzxw/iplist_action
+        token: ${{ secrets.GIT_PAT }}
+
+
+    - name: Pull repository "iplist"
     - uses: actions/checkout@v2
       with:
         path: iplist
-    - uses: actions/checkout@v2
-      with:
-        repository: env.REPO_URL
-        token: env.REPO_TOKEN
+        persist-credentials: false
+        fetch-depth: 0
 
-    
+
     - name: Initialization environment
       run: |
-        sudo -E apt-get -qq update
         sudo -E apt-get -qq install python3-setuptools
+
 
     - name: Update ip list
       run: |
@@ -48,6 +52,7 @@ jobs:
         pip3 install wheel
         pip3 install -r requirements.txt
         python3 main.py
+
 
     - name: Commit files
       run: |
@@ -57,8 +62,11 @@ jobs:
         git add *
         git commit -m "update" -a
 
-    - name: Push changes to submodule
+
+    - name: Push changes
       uses: ad-m/github-push-action@master
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        branch:  "update"
+        branch: update
+        directory: iplist
+        force: true
