--- a/.config
+++ b/.config
@@ -41,6 +41,15 @@
             "ipv6": false,
             "main_include": true,
             "all_in_file": true
+        },
+
+        {
+            "directory_name": "Netflix",
+            "keyword": "NETFLIX",
+            "ipv4": true,
+            "ipv6": false,
+            "main_include": true,
+            "all_in_file": true
         }
     ]
 }
